@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.3 2002/12/23 12:52:29 toshii Exp $
+$NetBSD: distinfo,v 1.4 2004/11/29 15:00:42 uebayasi Exp $
 
-SHA1 (monafont-2.22.tar.bz2) = e1afdced81efd7cc2854113fef95ee7aac7779a7
-Size (monafont-2.22.tar.bz2) = 679935 bytes
+SHA1 (monafont-2.90.tar.bz2) = 6106097a74afed072b3c49555356c5cb88cec172
+Size (monafont-2.90.tar.bz2) = 808897 bytes
 SHA1 (patch-aa) = 3fc21159dbe3a282b919ef73fd722db79f67732c
